--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-** Copyright 2012 two forty four a.m. LLC <http://www.twofortyfouram.com>
-**
 ** Licensed under the Apache License, Version 2.0 (the "License");
 ** you may not use this file except in compliance with the License.
 ** You may obtain a copy of the License at <http://www.apache.org/licenses/LICENSE-2.0>
@@ -19,11 +17,25 @@
 
     <!-- Name of the plug-in that appears in Locale -->
     <string name="plugin_name">MetaWatch</string>
+    
+        
+    <!-- notification radio label -->
+    <string name="notification_label">Notification</string>
+    
+    <!-- widget radio label -->
+    <string name="widget_label">Widget</string>
+    
 
-    <!-- Hint text in the toast edit text -->
+    <!-- Hint text in the message edit text -->
     <string name="message_hint">MetaWatch notification message</string>
     
-    <!-- Hint text in the toast edit text -->
+    <!-- Hint text in the title edit text -->
     <string name="title_hint">MetaWatch notification title</string>
+    
+    <!-- Hint text in the message edit text -->
+    <string name="id_hint">widget unique id</string>
+    
+    <!-- Hint text in the title edit text -->
+    <string name="value_hint">widget text</string>
 
 </resources>
